objects/opportunity__c.object
<CustomObject>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <label>EmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <displayFormat>NO-{0000}</displayFormat>
        <label>OrderNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TableList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TableList</label>
        <referenceTo>TableList__c</referenceTo>
        <relationshipLabel>opportunitys</relationshipLabel>
        <relationshipName>opportunitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stagename__c</fullName>
        <label>stagename</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>opportunitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>